--- a/package.json
+++ b/package.json
@@ -59,13 +59,13 @@
   },
   "homepage": "https://github.com/garycourt/uri-js",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
+    "@babel/cli": "^7.21.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
     "mocha": "10.2.0",
     "mocha-qunit-ui": "^0.1.3",
     "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-node-resolve": "^2.0.0",
     "sorcery": "^0.10.0",
     "typescript": "^2.8.1",
